--- a/src/pug/includes/join-waitlist-form.pug
+++ b/src/pug/includes/join-waitlist-form.pug
@@ -7,6 +7,7 @@ form(netlify).joinWaitlistForm.w-100
         input#email.form-control(
             type='email',
             placeholder='name@example.com'
+            name='email'
             required=''
         )
         label(for='email') Email address
@@ -21,10 +22,7 @@ form(netlify).joinWaitlistForm.w-100
     // has successfully submitted
     .submitSuccessMessage.d-none
         .text-center.mb-3
-            .fw-bolder Form submission successful!
-            | To activate this form, sign up at
-            br
-            a(href='https://startbootstrap.com/solution/contact-forms') https://startbootstrap.com/solution/contact-forms
+            .fw-bolder We'll keep you up to date as we get closer to launch!
 
     // Submit error message
     //
