Updated title tag and added autofocus

--- a/src/pug/includes/join-waitlist-form.pug
+++ b/src/pug/includes/join-waitlist-form.pug
@@ -9,6 +9,7 @@ form(netlify).joinWaitlistForm.w-100
             placeholder='name@example.com'
             name='email'
             required=''
+            autofocus
         )
         label(for='email') Email address
         .invalid-feedback(data-sb-feedback='email:required')
