--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -155,7 +155,7 @@ html(lang='en')
                                         p.text-muted.mb-0 Your session ends automatically when you place your board and paddle in any station - even if your phone is dead
                     .col-lg-4.order-lg-0
                         // Features section device mockup
-                        img.img-fluid.rounded(src="assets/img/paddle-top-down.jpg" alt="")
+                        img.img-fluid.rounded.img-shadow(src="assets/img/paddle-top-down.jpg" alt="")
 
         //- // Basic features section
         //- section.bg-light
@@ -186,7 +186,7 @@ html(lang='en')
                                 | Comes with bungee cords
                     .col-sm-8.col-md-6
                         .px-5.px-sm-0
-                            img.img-fluid.rounded(src='assets/img/standup-paddleboarding.jpg' alt='...')
+                            img.img-fluid.rounded.img-shadow(src='assets/img/standup-paddleboarding.jpg' alt='...')
 
         // Call to action section
         section.cta
