Removed MOV version of vid

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -82,8 +82,8 @@ html(lang='en')
                                         // * * Set the max width of your media to 100% and the height to
                                         // * * 100% like the demo example below.
                                         video(muted='muted' autoplay='' playsinline loop='' style='max-width: 100%; height: 100%;' poster='assets/img/demo-app.jpeg')
-                                            source(src='assets/img/demo-app.mov' type='video/mp4')
                                             source(src='assets/img/demo-app.mp4' type='video/mp4')
+
                     .col-lg-6.order-lg-1
                         // Mashead text and app badges
                         .mb-5.mb-lg-0.text-center.text-lg-start.mt-5
@@ -210,7 +210,7 @@ html(lang='en')
             .container.px-5
                 .text-white-50.small
                     .mb-2 &copy; #{AppName} 2022. All Rights Reserved.
-                    .mb-2 As we near launch date some of the information on this page may change.
+                    .mb-2 As we progress information and timeframes on this page may change.
                     //- a(href='#!') Privacy
                     //- span.mx-1 &middot;
                     //- a(href='#!') Terms
