--- a/src/pug/includes/feedback-modal.pug
+++ b/src/pug/includes/feedback-modal.pug
@@ -4,7 +4,7 @@
     .modal-dialog.modal-dialog-centered
         .modal-content
             .modal-header.bg-gradient-primary-to-secondary.p-4
-                h5#feedbackModalLabel.modal-title.font-alt.text-white Join the waitlist
+                h5#feedbackModalLabel.modal-title.font-alt.text-white We'll tell you as soon as we launch
                 button.btn-close.btn-close-white(type='button' data-bs-dismiss='modal' aria-label='Close')
             .modal-body.border-0.p-4
 
