Added QR code to background of device

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -73,6 +73,7 @@ html(lang='en')
                         .masthead-device-mockup
                             include includes/gradient-circle
                             //- include includes/shape-1
+                            include includes/qr-code
                             include includes/shape-2
                             .device-wrapper
                                 .device(data-device='iPhoneX' data-orientation='portrait' data-color='black')
